@@ -10,7 +10,7 @@
 
     <groupId>com.marmoush</groupId>
     <artifactId>jbom</artifactId>
-    <version>0.3.5</version>
+    <version>0.4.0</version>
     <packaging>pom</packaging>
 
     <name>${project.artifactId}</name>
@@ -23,8 +23,8 @@
 
     <properties>
         <!--Java and Maven -->
-        <java.version>13</java.version>
-        <maven.version>3.6.1</maven.version>
+        <java.version>14</java.version>
+        <maven.version>3.6.3</maven.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Plugins -->
@@ -121,13 +121,13 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>14</source>
+                    <target>14</target>
                     <release>${java.version}</release>
                     <fork>true</fork>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
-                    <compilerArgs>
+                    <compilerArgs>--enable-preview
                         <!-- <arg>-Werror</arg> -->
                         <!--<arg>-Xlint:serial</arg>-->
                         <arg>-Xlint:cast</arg>
@@ -195,6 +195,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
+                    <argLine>--enable-preview</argLine>
                     <includes>
                         <include>**/Test*.java</include>
                         <include>**/*Test.java</include>
